cluster/apps/networking-system/ingresses/base/transmission/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`trans.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
        - name: local-only
      services:
        - name: transmission
          port: 9091
          namespace: default
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
